--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection":"Server=localhost;Port=5432;Database=ecommerceapi;Username=postgres;Password=123456789;"
-  
+    "DefaultConnection": "Server=localhost;Port=5432;Database=postgres;Username=postgres;Password=1234;"
   }
 }
