--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=postgres;Username=postgres;Password=1234;"
+  },
+   "Jwt": {
+    "Key": "your_secret_key_here_make_it_long_and_random",
+    "Issuer": "LocalhostIssuer",
+    "Audience": "LocalhostAudience"
   }
 }
