--- a/appsettings.json
+++ b/appsettings.json
@@ -5,13 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=ecommerceapi;Username=postgres;Password=123456789;"
-  },
-   "Jwt": {
-    "Key": "your_secret_key_here_make_it_long_and_random",
-    "Issuer": "LocalhostIssuer",
-    "Audience": "LocalhostAudience"
-  }
+  "AllowedHosts": "*"
 }
